--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -32,6 +32,20 @@
       "version": 0
     },
     {
+      "docset_name": "openpublishing-test-docset-redirection",
+      "build_source_folder": "openpublishing/test-docset-redirection",
+      "build_output_subfolder": "openpublishing-test-docset-redirection",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "openpublishing-test-op",
       "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test-op",
