--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -2,6 +2,20 @@
   "build_entry_point": "op",
   "docsets_to_publish": [
     {
+      "docset_name": "openpublishing-docset-redirection",
+      "build_source_folder": "openpublishing/docset-redirection",
+      "build_output_subfolder": "openpublishing-docset-redirection",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "openpublishing-test-azure",
       "build_source_folder": "openpublishing/azure-docs-pr",
       "build_output_subfolder": "openpublishing/test/azure",
